--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <style>
     body {
-      background-color: #f0f8ff; /* 전체 배경색 */
+      background-color: #33d3a0; /* 전체 배경색 */
     }
     .hero {
       background-image: url('https://example.com/forest.jpg'); /* 축제 관련 이미지 링크 */
