--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       background-color: #84ebca; /* 전체 배경색 */
     }
     .hero {
-      background-image: url('https://example.com/forest.jpg'); /* 축제 관련 이미지 링크 */
+      background-image: url('https://unsplash.com/ko/%EC%82%AC%EC%A7%84/%EB%B6%88%EA%BD%83%EB%86%80%EC%9D%B4%EB%A5%BC-%EA%B5%AC%EA%B2%BD%ED%95%98%EB%8A%94-%EB%A7%8E%EC%9D%80-%EC%82%AC%EB%9E%8C%EB%93%A4-WSqnY1B4Tlg'); /* 축제 관련 이미지 링크 */
       background-size: cover;
       background-position: center;
       height: 100vh;
