--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
       margin-bottom: 20px;
     }
     .about-section {
-      background-color: #ffffff; /* 축제 소개 섹션 배경색 */
+      background-color: #99f3e8; /* 축제 소개 섹션 배경색 */
     }
     .schedule-section {
-      background-color: #e9ecef; /* 행사 일정 섹션 배경색 */
+      background-color: #99f3e8; /* 행사 일정 섹션 배경색 */
     }
     .info-section {
-      background-color: #ffffff; /* 방문 정보 섹션 배경색 */
+      background-color: #99f3e8; /* 방문 정보 섹션 배경색 */
     }
     .contact-section {
-      background-color: #e9ecef; /* 문의하기 섹션 배경색 */
+      background-color: #acdfd9; /* 문의하기 섹션 배경색 */
     }
   </style>
 </head>
