--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
       margin-bottom: 20px;
     }
     .about-section {
-      background-color: #99f3e8; /* 축제 소개 섹션 배경색 */
+      background-color: #84ebca; /* 축제 소개 섹션 배경색 */
     }
     .schedule-section {
-      background-color: #99f3e8; /* 행사 일정 섹션 배경색 */
+      background-color: #84ebca; /* 행사 일정 섹션 배경색 */
     }
     .info-section {
-      background-color: #99f3e8; /* 방문 정보 섹션 배경색 */
+      background-color: #84ebca; /* 방문 정보 섹션 배경색 */
     }
     .contact-section {
       background-color: #acdfd9; /* 문의하기 섹션 배경색 */
